# projeto_mobi_dashboards

./: .gitignore  README.md  package-lock.json
backend/: .env  README.md  app.py  functions.py  pyproject.toml  requirements.txt
backend/blueprints/: cadastro.py  cursos.py  cursosColunas.py  enderecos.py  genero.py  indicatorTransport.py  login.py  mapRoute.py  modestransport.py  pieChartRoute.py  sent_event.py  trecho.py  usergenderBar.py  verticalBar.py
backend/blueprints/dash/: .env  barsHorizontal.py  barsVertical.py  indicator.py  models.py  pie.py
backend/dash/: cursos.py  genero.py  indicator.py  map.py  models.py  pie.py
backend/models/: __init__.py
db/: api_itinerarios_enderecos.sql  api_itinerarios_itinerario.sql  api_itinerarios_trecho.sql  api_itinerarios_usuarios.sql
frontend/: package-lock.json  package.json
frontend/app/: package-lock.json  package.json
frontend/app/src/: App.css  App.jsx  index.css
frontend/app/src/components/: bar.js  curso.jsx  endereco.jsx  gender.js  genero.jsx  map.css  map.js  mapa.jsx  pageLoader.jsx  pie.js  transport.jsx
frontend/app/src/components/css/: loaderCSS.css
frontend/src/: App.css  App.jsx
frontend/src/components/: curso.jsx  endereco.jsx  genero.jsx  mapa.jsx  transport.jsx
frontend/src/components/Filtros/: Filter.jsx
frontend/src/components/Home/: Home.css  Home.jsx
frontend/src/components/Login/: index.jsx
frontend/src/components/Routes/: rotas.js
frontend/src/components/css/: login.css
frontend/src/components/sidebar/: index.jsx
prediction_model/: modelTraining.ipynb
(+1 files in other folders)
